<resources>
    <string name="app_name">Parenting Pro</string>

    <!--    main mune    -->
    <string name="main_menu">Main Menu</string>

    <!--    Config Child-->
    <string name="config_child">Config Children</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="input_name">Input Child Name</string>

    <!--    Timer-->
    <string name="timer">Timer</string>
    <string name="timeout_timer">Timeout Timer</string>
    <string name="one_min">1 min</string>
    <string name="two_min">2 min</string>
    <string name="three_min">3 min</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="cus_time">Custom Minutes:</string>
    <string name="set">SET</string>
    <string name="timer_expire_text">Your timeout timer has expired</string>
    <string name="timeout_title">Timeout Timer Notification</string>
    <string name="timeout_content">Timer Expired</string>
    <string name="time_invalid">Time is Invalid</string>

    <!--    Flip Coin-->
    <string name="flip_coin_title">Flip Coin</string>
    <string name="flip_button_text">FLIP</string>
    <string name="flip_choice_text">Turn: %1s</string>
    <string name="history_button_text">View Full History</string>
    <string name="no_play">No Play</string>
    <string name="next_child_text">%1s?</string>
    <string name="current_child_history_text">View %1s\'s History</string>
    <string name="no_child_choose">Turn: Nobody</string>
    <string name="head">Heads</string>
    <string name="tail">Tails</string>

    <!--    flip coin choose children menu-->
    <string name="flip_window_head_text">click to set the child to the first in queue</string>

    <!--    History-->
    <string name="history_title">History</string>
    <string name="history_date">Date</string>
    <string name="history_name">Name</string>
    <string name="history_chose">Chose</string>
    <string name="history_result">Result</string>
    <string name="save_button_text">SAVE</string>
    <string name="edit_button_text">EDIT</string>
    <string name="select">select</string>
    <string name="profile_picture">profile picture</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">take photo</string>
    <string name="name">name</string>
    <string name="child_editor">Child Editor</string>
    <string name="back">back</string>
    <string name="text_change_turn_hint">Note: Press and hold turn in order to change</string>


    <!--    Whose Turn-->
    <string name="empty">NA</string>
    <string name="whose_turn_title">Tasks</string>
    <string name="whose_ture_finish">finish</string>
    <string name="whose_ture_cancel">cancel</string>

    <!--    Help-->
    <string name="help">Help</string>
    <string name="help_title_text">Help</string>
    <string name="team_body_text">Teal</string>
    <string name="developers_body_text">\Hareet Dhillon\nNyarika Kemo Sonko\nZhilong Gan\nZhu Zhao</string>
    <string name="copyright_title_text">Copyright Information:</string>
    <string name="developers_title_text">Developers:</string>
    <string name="team_title_text">Team:</string>
    <string name="copyright_body_text">
        <![CDATA[            1. Green check mark image: <a href="https://freeiconshop.com/icon/checkmark-icon-flat/">LINK</a>
                             <br />2. Red cross image: <a href="https://freeiconshop.com/icon/cross-icon-flat/">LINK</a>
                             <br />3. Coin heads image: <a href="https://imgbin.com/png/V0sKs9P6/150th-anniversary-of-canada-toonie-royal-canadian-mint-canadian-dollar-png">LINK</a>
                             <br />4. Coin tails image <a href="https://imgbin.com/png/Bu9vSHhb/150th-anniversary-of-canada-toonie-loonie-coin-png">LINK</a>
                             <br />5. Coin flip sound: <a href="https://freesound.org/people/bone666138/sounds/198877/">LINK</a>
                             <br />6. App icon: <a href="https://www.vectorstock.com/royalty-free-vector/single-cartoon-the-letter-p-vector-29560936">LINK</a>
                             <br />7. Default child image: <a href="https://www.google.com/imgres?imgurl=https://icon-library.com/images/default-profile-icon/default-profile-icon-16.jpg&imgrefurl=https://icon-library.com/icon/default-profile-icon-17.html&tbnid=HNsL7Ta1qfeJdM&vet=1&docid=4DpWwwRlSTf6qM&w=1890&h=1890&hl=en-us&source=sh/x/im">LINK</a>
                             <br />8. App background: <a href="https://prcm.jp/album/04b729af46ecb/pic/83724955">LINK</a>\n
        ]]>
    </string>
    <string name="whose_turn">Whose Turn</string>
    <string name="nameasdafa">nameasdafa</string>
    <string name="tv">tv</string>

    <!--    take breath-->
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="hold_breath_in">Hold Button and breath in</string>
    <string name="left_breath">Left %1d\ breaths</string>
    <string name="good_job">Good job</string>
    <string name="release_breath_out">Release Button and breath out</string>
    <string name="let_take_breath">Let take %1d breaths together</string>
    <string name="begin">Begin</string>
    <string name="btn_disable">Button disable</string>

    <string name="take_breath">take breath</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="seekbar_text_string">3</string>
    <string name="btn_breath_text">Begin</string>
    <string name="task_description">task description</string>
    <string name="flip_child_order_text">1</string>
    <string name="child_name">name</string>
    <string name="time_zero">00:00</string>
    <string name="title">title</string>
    <string name="no_child_text">NO child</string>
</resources>