<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background2"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ChildTab"
    tools:deviceIds="wear">

  <Button
      android:id="@+id/popup_gallery"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="55dp"
      android:layout_marginBottom="145dp"
      android:text="@string/gallery"
      app:layout_constraintBottom_toTopOf="@+id/popup_profile_pic"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/popup_take_photo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="55dp"
      android:layout_marginBottom="145dp"
      android:text="@string/take_photo"
      app:layout_constraintBottom_toTopOf="@+id/popup_profile_pic"
      app:layout_constraintEnd_toEndOf="parent" />

  <ImageView
      android:id="@+id/popup_profile_pic"
      android:layout_width="247dp"
      android:layout_height="255dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.663"
      app:srcCompat="@drawable/default_profile_pic"
      android:contentDescription="@string/profile_picture" />

  <EditText
      android:id="@+id/popup_edit_name"
      style="@style/text_general"
      android:layout_width="174dp"
      android:layout_height="49dp"
      android:layout_marginStart="55dp"
      android:layout_marginBottom="13dp"
      android:ems="10"
      android:textSize="20sp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/popup_text"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/popup_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="82dp"
      android:layout_marginBottom="22dp"
      android:text="@string/name"
      android:textAlignment="center"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/popup_profile_pic"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/popup_edit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="73dp"
      android:layout_marginBottom="22dp"
      android:text="@string/edit"
      app:layout_constraintBottom_toTopOf="@+id/popup_profile_pic"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>