<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".TakeBreathActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="304dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_desc"
                style="@style/text_general"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_take_breath" />



        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

            <TextView
                android:id="@+id/tv_help"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/text_general"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hold_breath_in" />

            <TextView
                android:id="@+id/seekbar_text"
                style="@style/text_seekbar"
                android:layout_above="@id/breath_seekbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seekbar_text_string" />

            <SeekBar
                android:id="@+id/breath_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:layout_centerInParent="true"
                android:maxHeight="5sp"
                android:paddingHorizontal="100dp"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@drawable/seekbar_thumb" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center">

            <Button
                android:id="@+id/btn_breath"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/take_breath_btn"
                style="@style/text_general"
                android:text="@string/btn_breath_text" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>